<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">CQUFSC油车仪表</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="string">start</string>
	<string name="stringb">open</string>
	<string name="string1">Mileage：</string>
	<string name="string2">Speed：</string>
	<string name="string3">发动机转速：</string>
	<string name="string4"> Temp：</string>
	<string name="string5"> Gear：</string>
	<string name="string6">Rspeed：</string>
	<string name="danwei1">KM</string>
	<string name="danwei2">Km/h</string>
	<string name="danwei3">RPM</string>
	<string name="danwei4">℃</string>
	<string name="danwei5">档</string>
</resources>
